# pulse

./: Cargo.toml  PLAN.md
config/: classification.json
src/: cli.rs  main.rs
src/application/: mod.rs  orchestration.rs
src/application/use_cases/: aggregate_news.rs  fetch_hot_news.rs  mod.rs
src/domain/: mod.rs
src/domain/config/: classification_config.rs
src/domain/entities/: mod.rs  news_item.rs
src/domain/fetchers/: mod.rs  news_fetcher.rs
src/domain/repositories/: mod.rs  news_repository.rs
src/domain/services/: classification_redesign_tests.rs  content_extractor.rs  mod.rs  news_classification_service.rs  news_deduplication_service.rs  news_inference_service.rs  news_sorting_service.rs
src/domain/strategies/: classification_strategy.rs  keyword_based_strategy.rs  mod.rs  source_based_strategy.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/migrations/: 001_initial.sql  002_add_content_and_status.sql  003_add_classification_reason.sql
src/infrastructure/inference/: mod.rs  ollama_inference_service.rs
src/infrastructure/news_sources/: hacker_news_source.rs  mod.rs
src/infrastructure/repositories/: mod.rs  sqlite_news_repository.rs
